# ontology-chat-builder

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  api_client.py  config.py  docker-compose.yml  ontology_builder.ipynb  ontology_builder.py  pyproject.toml  requirements.txt  university.owl
docs/: wiki_manifest.yaml
tests/: test_smoke.py
