[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ontology-chat-builder"
version = "0.1.0"
description = "AI-assisted OWL ontology creation"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
